# currency

./: .gitignore  .pylintrc  Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: main.py
app/apis/: conversion.py
app/entities/: currency.py
app/repositories/: currency.py
app/schemas/: conversion.py
app/services/: conversion.py
nginx/: nginx.conf
tests/: fixtures.py  test_conversion_api.py  test_conversion_service.py  test_exchange_rate_repository.py
