[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = "Currency converter api"
authors = ["Lucas Muller Gomes <lmgomes96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pylint = "^3.2.0"
isort = "^5.13.2"
requests-mock = "^1.12.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
src_paths = ["app"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
pythonpath = ["./app"]